# crossing_guard

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: graphics.cmake
common/: CMakeLists.txt
common/interface/: simulation_clock.hpp  traffic_state.hpp  vector2.hpp
common/src/: simulation_clock.cpp  vector2.cpp
dependencies/: CMakeLists.txt
graphics_engine/: CMakeLists.txt
graphics_engine/interface/: graphics_engine.hpp  object_drawer.hpp
graphics_engine/src/: graphics_engine.cpp  object_drawer.cpp
sim_engine/include/: sim.hpp
sim_engine/src/: sim.cpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/src/: main.cpp
source/common/interface/: input_state.hpp  simulation_clock.hpp  simulation_state.hpp  traffic_state.hpp  vector2.hpp
source/common/src/: simulation_clock.cpp  vector2.cpp
source/graphics_engine/: CMakeLists.txt
source/graphics_engine/interface/: graphics_engine.hpp  object_drawer.hpp
source/graphics_engine/src/: graphics_engine.cpp  object_drawer.cpp
source/input_manager/: CMakeLists.txt
source/input_manager/interface/: input_manager.hpp  input_state.hpp
source/input_manager/src/: input_manager.cpp
source/traffic_engine/: CMakeLists.txt
source/traffic_engine/include/: traffic_engine.hpp  vehicle.hpp
source/traffic_engine/src/: hardbody.cpp  traffic_engine.cpp  vehicle.cpp
source/window_manager/: CMakeLists.txt
source/window_manager/interface/: window_manager.hpp
source/window_manager/src/: window_manager.cpp
traffic_engine/: CMakeLists.txt
traffic_engine/include/: hardbody.hpp  simulation_clock.hpp  traffic_engine.hpp
traffic_engine/src/: hardbody.cpp  simulation_clock.cpp  traffic_engine.cpp
